--- a/public/css/style.css
+++ b/public/css/style.css
@@ -676,21 +676,20 @@ h1,
   flex-direction: column;
   align-items: center;
   gap: 2rem;
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
+  background-color: rgb(255 255 255 / 0.9);
   padding-top: 7rem;
   padding-bottom: 2rem;
-  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+  --tw-text-opacity: 1;
+  color: rgb(55 65 81 / var(--tw-text-opacity, 1));
   transition-property: all;
   transition-duration: 500ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .nav-menus:is(.dark *){
-  --tw-bg-opacity: 1;
-  background-color: rgb(57 62 70 / var(--tw-bg-opacity, 1));
+  background-color: rgb(57 62 70 / 0.9);
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity, 1));
 }
 
 @media (min-width: 768px){
@@ -701,9 +700,6 @@ h1,
     gap: 3rem;
     background-color: transparent;
     padding: 0px;
-    --tw-shadow: 0 0 #0000;
-    --tw-shadow-colored: 0 0 #0000;
-    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
   }
 
   .nav-menus:is(.dark *){
@@ -721,6 +717,16 @@ h1,
 }
 
 .nav-link:hover{
+  --tw-text-opacity: 1;
+  color: rgb(0 173 181 / var(--tw-text-opacity, 1));
+}
+
+.nav-link:is(.dark *){
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity, 1));
+}
+
+.nav-link:hover:is(.dark *){
   --tw-text-opacity: 1;
   color: rgb(0 173 181 / var(--tw-text-opacity, 1));
 }
@@ -1092,6 +1098,10 @@ h1,
 
 .max-w-sm{
   max-width: 24rem;
+}
+
+.max-w-2xl{
+  max-width: 42rem;
 }
 
 .flex-1{
@@ -1551,10 +1561,6 @@ h1,
   transition-duration: 500ms;
 }
 
-.ease-in-out{
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
 /* Blob Animation */
 
 @keyframes blob {
@@ -1819,11 +1825,6 @@ h1,
   background-color: rgb(34 40 49 / var(--tw-bg-opacity, 1));
 }
 
-.dark\:bg-primary-gray:is(.dark *){
-  --tw-bg-opacity: 1;
-  background-color: rgb(57 62 70 / var(--tw-bg-opacity, 1));
-}
-
 .dark\:bg-primary-gray\/90:is(.dark *){
   background-color: rgb(57 62 70 / 0.9);
 }
@@ -1846,6 +1847,11 @@ h1,
 .dark\:invert:is(.dark *){
   --tw-invert: invert(100%);
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
+.dark\:hover\:text-primary:hover:is(.dark *){
+  --tw-text-opacity: 1;
+  color: rgb(0 173 181 / var(--tw-text-opacity, 1));
 }
 
 @media (min-width: 768px){
