--- a/public/css/style.css
+++ b/public/css/style.css
@@ -661,7 +661,6 @@ body:is(.dark *){
   z-index: 20;
   display: flex;
   width: 100%;
-  --tw-translate-y: -200%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   flex-direction: column;
   align-items: center;
@@ -672,13 +671,16 @@ body:is(.dark *){
   padding-bottom: 2rem;
   --tw-text-opacity: 1;
   color: rgb(55 65 81 / var(--tw-text-opacity, 1));
+  --tw-backdrop-blur: blur(4px);
+  -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+  backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
   transition-property: transform;
   transition-duration: 500ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .nav-menus:is(.dark *){
-  background-color: transparent;
+  background-color: rgb(57 62 70 / 0.9);
   --tw-text-opacity: 1;
   color: rgb(229 231 235 / var(--tw-text-opacity, 1));
 }
@@ -693,6 +695,10 @@ body:is(.dark *){
     gap: 3rem;
     background-color: transparent;
     padding: 0px;
+  }
+
+  .nav-menus:is(.dark *){
+    background-color: transparent;
   }
 }
 
@@ -1176,6 +1182,10 @@ body:is(.dark *){
   margin-bottom: 2rem;
 }
 
+.mr-2{
+  margin-right: 0.5rem;
+}
+
 .mt-16{
   margin-top: 4rem;
 }
@@ -1186,10 +1196,6 @@ body:is(.dark *){
 
 .mt-4{
   margin-top: 1rem;
-}
-
-.mr-2{
-  margin-right: 0.5rem;
 }
 
 .block{
@@ -1360,10 +1366,6 @@ body:is(.dark *){
   max-width: 28rem;
 }
 
-.max-w-xl{
-  max-width: 36rem;
-}
-
 .flex-1{
   flex: 1 1 0%;
 }
@@ -1518,10 +1520,6 @@ body:is(.dark *){
   border-radius: 0.75rem;
 }
 
-.rounded-md{
-  border-radius: 0.375rem;
-}
-
 .border{
   border-width: 1px;
 }
@@ -1635,11 +1633,6 @@ body:is(.dark *){
   background-color: rgb(234 179 8 / var(--tw-bg-opacity, 1));
 }
 
-.bg-slate-200{
-  --tw-bg-opacity: 1;
-  background-color: rgb(226 232 240 / var(--tw-bg-opacity, 1));
-}
-
 .bg-gradient-to-br{
   background-image: linear-gradient(to bottom right, var(--tw-gradient-stops));
 }
@@ -1683,10 +1676,6 @@ body:is(.dark *){
 
 .p-6{
   padding: 1.5rem;
-}
-
-.p-3{
-  padding: 0.75rem;
 }
 
 .p-8{
@@ -1756,14 +1745,6 @@ body:is(.dark *){
   padding-top: 6rem;
 }
 
-.pb-32{
-  padding-bottom: 8rem;
-}
-
-.pt-36{
-  padding-top: 9rem;
-}
-
 .text-center{
   text-align: center;
 }
@@ -1801,16 +1782,6 @@ body:is(.dark *){
 .text-xs{
   font-size: 0.75rem;
   line-height: 1rem;
-}
-
-.text-3xl{
-  font-size: 1.875rem;
-  line-height: 2.25rem;
-}
-
-.text-base{
-  font-size: 1rem;
-  line-height: 1.5rem;
 }
 
 .font-bold{
@@ -1857,6 +1828,11 @@ body:is(.dark *){
   color: rgb(156 163 175 / var(--tw-text-opacity, 1));
 }
 
+.text-gray-500{
+  --tw-text-opacity: 1;
+  color: rgb(107 114 128 / var(--tw-text-opacity, 1));
+}
+
 .text-gray-600{
   --tw-text-opacity: 1;
   color: rgb(75 85 99 / var(--tw-text-opacity, 1));
@@ -1870,6 +1846,11 @@ body:is(.dark *){
 .text-gray-800{
   --tw-text-opacity: 1;
   color: rgb(31 41 55 / var(--tw-text-opacity, 1));
+}
+
+.text-gray-900{
+  --tw-text-opacity: 1;
+  color: rgb(17 24 39 / var(--tw-text-opacity, 1));
 }
 
 .text-green-500{
@@ -1895,16 +1876,6 @@ body:is(.dark *){
 .text-yellow-500{
   --tw-text-opacity: 1;
   color: rgb(234 179 8 / var(--tw-text-opacity, 1));
-}
-
-.text-gray-900{
-  --tw-text-opacity: 1;
-  color: rgb(17 24 39 / var(--tw-text-opacity, 1));
-}
-
-.text-gray-500{
-  --tw-text-opacity: 1;
-  color: rgb(107 114 128 / var(--tw-text-opacity, 1));
 }
 
 .opacity-0{
@@ -2293,12 +2264,6 @@ body:is(.dark *){
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
 
-.focus\:ring-1:focus{
-  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
-  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color);
-  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
-}
-
 .focus\:ring-primary:focus{
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(0 173 181 / var(--tw-ring-opacity, 1));
@@ -2341,6 +2306,11 @@ body:is(.dark *){
   background-color: rgb(31 41 55 / var(--tw-bg-opacity, 1));
 }
 
+.dark\:bg-gray-900:is(.dark *){
+  --tw-bg-opacity: 1;
+  background-color: rgb(17 24 39 / var(--tw-bg-opacity, 1));
+}
+
 .dark\:bg-primary-black:is(.dark *){
   --tw-bg-opacity: 1;
   background-color: rgb(34 40 49 / var(--tw-bg-opacity, 1));
@@ -2348,15 +2318,6 @@ body:is(.dark *){
 
 .dark\:bg-primary-gray\/90:is(.dark *){
   background-color: rgb(57 62 70 / 0.9);
-}
-
-.dark\:bg-transparent:is(.dark *){
-  background-color: transparent;
-}
-
-.dark\:bg-gray-900:is(.dark *){
-  --tw-bg-opacity: 1;
-  background-color: rgb(17 24 39 / var(--tw-bg-opacity, 1));
 }
 
 .dark\:text-gray-200:is(.dark *){
@@ -2513,6 +2474,10 @@ body:is(.dark *){
 
   .md\:hover\:opacity-100:hover{
     opacity: 1;
+  }
+
+  .md\:dark\:bg-transparent:is(.dark *){
+    background-color: transparent;
   }
 }
 
