--- a/src/css/input.css
+++ b/src/css/input.css
@@ -43,17 +43,18 @@
 
   .nav-menus {
     @apply fixed md:static 
-       top-[64px] left-0 z-20 
-       flex flex-col md:flex-row 
-       items-center justify-center
-       gap-8 md:gap-12 
-       py-8 md:p-0
-       w-full md:w-auto 
-       bg-white/90 dark:bg-transparent 
-       md:bg-transparent
-       text-gray-700 dark:text-gray-200
-       transform translate-y-[-200%] md:translate-y-0
-       transition-transform duration-500 ease-in-out;
+         top-[64px] left-0 z-20 
+         flex flex-col md:flex-row 
+         items-center justify-center
+         gap-8 md:gap-12 
+         py-8 md:p-0
+         w-full md:w-auto 
+         bg-white/90 dark:bg-primary-gray/90
+         md:bg-transparent md:dark:bg-transparent
+         text-gray-700 dark:text-gray-200
+         transform md:translate-y-0
+         transition-transform duration-500 ease-in-out
+         backdrop-blur-sm;
   }
 
   /* Add this class for menu visibility */
