--- a/src/css/input.css
+++ b/src/css/input.css
@@ -54,8 +54,8 @@
          bg-white/90 dark:bg-primary-gray/90
          md:bg-transparent md:dark:bg-transparent
          text-gray-700 dark:text-gray-200
-         transform md:translate-y-0
-         transition-transform duration-500 ease-in-out
+         translate-y-[-200%] md:translate-y-0
+         transition-transform duration-300 ease-in-out
          backdrop-blur-sm;
   }
 
