fix toggle not dissapear

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -663,7 +663,7 @@ body:is(.dark *){
   z-index: 20;
   display: flex;
   width: 100%;
-  --tw-translate-y: -200%;
+  --tw-translate-y: -150vh;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   flex-direction: column;
   align-items: center;
@@ -705,10 +705,7 @@ body:is(.dark *){
   }
 }
 
-.menu-visible{
-  --tw-translate-y: 0px;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
+/* Remove .menu-visible class as we're using translate directly */
 
 .nav-link{
   transition-property: all;
@@ -1361,6 +1358,11 @@ body:is(.dark *){
 
 .translate-y-0{
   --tw-translate-y: 0px;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.translate-y-\[-150vh\]{
+  --tw-translate-y: -150vh;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
