--- a/src/css/input.css
+++ b/src/css/input.css
@@ -54,14 +54,12 @@
          bg-white/90 dark:bg-primary-gray/90
          md:bg-transparent md:dark:bg-transparent
          text-gray-700 dark:text-gray-200
-         translate-y-[-200%] md:translate-y-0
+         translate-y-[-150vh] md:translate-y-0
          transition-transform duration-300 ease-in-out
          backdrop-blur-sm;
   }
 
-  .menu-visible {
-    @apply translate-y-0;
-  }
+  /* Remove .menu-visible class as we're using translate directly */
 
   .nav-link {
     @apply interactive-base 
