--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1168,6 +1168,10 @@ body:is(.dark *){
   margin-right: 0.5rem;
 }
 
+.mt-1{
+  margin-top: 0.25rem;
+}
+
 .mt-16{
   margin-top: 4rem;
 }
@@ -1178,6 +1182,10 @@ body:is(.dark *){
 
 .mt-4{
   margin-top: 1rem;
+}
+
+.mt-8{
+  margin-top: 2rem;
 }
 
 .block{
@@ -1216,8 +1224,8 @@ body:is(.dark *){
   height: 2.5rem;
 }
 
-.h-12{
-  height: 3rem;
+.h-14{
+  height: 3.5rem;
 }
 
 .h-16{
@@ -1280,8 +1288,8 @@ body:is(.dark *){
   width: 2.5rem;
 }
 
-.w-12{
-  width: 3rem;
+.w-14{
+  width: 3.5rem;
 }
 
 .w-16{
@@ -2333,9 +2341,25 @@ body:is(.dark *){
 }
 
 @media (min-width: 640px){
+  .sm\:grid-cols-2{
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .sm\:flex-row{
+    flex-direction: row;
+  }
+
+  .sm\:items-start{
+    align-items: flex-start;
+  }
+
   .sm\:px-6{
     padding-left: 1.5rem;
     padding-right: 1.5rem;
+  }
+
+  .sm\:text-left{
+    text-align: left;
   }
 }
 
