--- a/src/css/input.css
+++ b/src/css/input.css
@@ -78,6 +78,23 @@
            hover:bg-primary hover:text-white transition-all duration-300;
   }
 
+  .theme-switch {
+    @apply relative z-30 w-12 h-6 rounded-full 
+       bg-gray-200 dark:bg-primary-black
+       flex items-center transition-all duration-300 
+       focus:outline-none
+       border-2 border-gray-300 dark:border-primary;
+  }
+
+  .switch-thumb {
+    @apply w-5 h-5 rounded-full 
+       bg-primary dark:bg-white
+       transform translate-x-0.5 dark:translate-x-6 
+       transition-all duration-300
+       flex items-center justify-center
+       shadow-md;
+  }
+
   .filter-btn.active {
     @apply bg-primary text-white;
   }
