--- a/public/css/style.css
+++ b/public/css/style.css
@@ -950,25 +950,6 @@ body:is(.dark *){
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
 }
 
-/* Home Image Container */
-
-.home-image-container{
-  position: relative;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 4rem;
-  height: 16rem;
-  width: 16rem;
-}
-
-@media (min-width: 768px){
-  .home-image-container{
-    margin-top: 0px;
-    height: 24rem;
-    width: 24rem;
-  }
-}
-
 /* Main Content */
 
 .main-content{
@@ -1067,6 +1048,10 @@ body:is(.dark *){
   background-color: rgb(31 41 55 / var(--tw-bg-opacity, 1));
 }
 
+.pointer-events-none{
+  pointer-events: none;
+}
+
 .static{
   position: static;
 }
@@ -1083,8 +1068,8 @@ body:is(.dark *){
   position: relative;
 }
 
-.-inset-0\.5{
-  inset: -0.125rem;
+.-inset-4{
+  inset: -1rem;
 }
 
 .inset-0{
@@ -1107,10 +1092,6 @@ body:is(.dark *){
   top: -1rem;
 }
 
-.bottom-0{
-  bottom: 0px;
-}
-
 .bottom-1\/4{
   bottom: 25%;
 }
@@ -1129,10 +1110,6 @@ body:is(.dark *){
 
 .left-4{
   left: 1rem;
-}
-
-.right-0{
-  right: 0px;
 }
 
 .right-10{
@@ -1177,10 +1154,6 @@ body:is(.dark *){
 
 .z-40{
   z-index: 40;
-}
-
-.order-1{
-  order: 1;
 }
 
 .order-2{
@@ -1228,10 +1201,6 @@ body:is(.dark *){
   margin-top: 0.25rem;
 }
 
-.mt-16{
-  margin-top: 4rem;
-}
-
 .mt-2{
   margin-top: 0.5rem;
 }
@@ -1266,6 +1235,10 @@ body:is(.dark *){
 
 .hidden{
   display: none;
+}
+
+.aspect-square{
+  aspect-ratio: 1 / 1;
 }
 
 .h-0\.5{
@@ -1328,10 +1301,6 @@ body:is(.dark *){
   height: 18rem;
 }
 
-.h-96{
-  height: 24rem;
-}
-
 .h-auto{
   height: auto;
 }
@@ -1388,16 +1357,8 @@ body:is(.dark *){
   width: 1.5rem;
 }
 
-.w-64{
-  width: 16rem;
-}
-
 .w-72{
   width: 18rem;
-}
-
-.w-96{
-  width: 24rem;
 }
 
 .w-auto{
@@ -1418,6 +1379,10 @@ body:is(.dark *){
 
 .max-w-6xl{
   max-width: 72rem;
+}
+
+.max-w-\[400px\]{
+  max-width: 400px;
 }
 
 .max-w-md{
@@ -1459,16 +1424,6 @@ body:is(.dark *){
 
 .transform{
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-@keyframes pulse{
-  50%{
-    opacity: .5;
-  }
-}
-
-.animate-pulse{
-  animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
 }
 
 .resize-none{
@@ -1513,10 +1468,6 @@ body:is(.dark *){
 
 .justify-between{
   justify-content: space-between;
-}
-
-.gap-12{
-  gap: 3rem;
 }
 
 .gap-2{
@@ -1617,6 +1568,10 @@ body:is(.dark *){
   border-top-width: 1px;
 }
 
+.border-dashed{
+  border-style: dashed;
+}
+
 .border-gray-300{
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity, 1));
@@ -1632,13 +1587,12 @@ body:is(.dark *){
   border-color: rgb(0 173 181 / var(--tw-border-opacity, 1));
 }
 
-.border-transparent{
-  border-color: transparent;
+.border-primary\/20{
+  border-color: rgb(0 173 181 / 0.2);
 }
 
-.border-white{
-  --tw-border-opacity: 1;
-  border-color: rgb(255 255 255 / var(--tw-border-opacity, 1));
+.border-transparent{
+  border-color: transparent;
 }
 
 .bg-blue-500{
@@ -1693,8 +1647,16 @@ body:is(.dark *){
   background-color: rgb(0 173 181 / 0.1);
 }
 
+.bg-primary\/15{
+  background-color: rgb(0 173 181 / 0.15);
+}
+
 .bg-primary\/20{
   background-color: rgb(0 173 181 / 0.2);
+}
+
+.bg-primary\/5{
+  background-color: rgb(0 173 181 / 0.05);
 }
 
 .bg-primary\/90{
@@ -1715,8 +1677,8 @@ body:is(.dark *){
   background-color: rgb(234 179 8 / var(--tw-bg-opacity, 1));
 }
 
-.bg-gradient-to-br{
-  background-image: linear-gradient(to bottom right, var(--tw-gradient-stops));
+.bg-gradient-to-b{
+  background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
 }
 
 .bg-gradient-to-r{
@@ -1729,8 +1691,8 @@ body:is(.dark *){
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
-.from-primary\/20{
-  --tw-gradient-from: rgb(0 173 181 / 0.2) var(--tw-gradient-from-position);
+.from-primary\/10{
+  --tw-gradient-from: rgb(0 173 181 / 0.1) var(--tw-gradient-from-position);
   --tw-gradient-to: rgb(0 173 181 / 0) var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
@@ -1739,13 +1701,18 @@ body:is(.dark *){
   --tw-gradient-to: #3b82f6 var(--tw-gradient-to-position);
 }
 
-.to-blue-500\/20{
-  --tw-gradient-to: rgb(59 130 246 / 0.2) var(--tw-gradient-to-position);
+.to-transparent{
+  --tw-gradient-to: transparent var(--tw-gradient-to-position);
 }
 
 .object-cover{
   -o-object-fit: cover;
      object-fit: cover;
+}
+
+.object-center{
+  -o-object-position: center;
+     object-position: center;
 }
 
 .p-2{
@@ -1968,10 +1935,6 @@ body:is(.dark *){
   opacity: 1;
 }
 
-.opacity-30{
-  opacity: 0.3;
-}
-
 .shadow-lg{
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
@@ -1984,31 +1947,13 @@ body:is(.dark *){
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.blur{
-  --tw-blur: blur(8px);
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
-}
-
 .blur-2xl{
   --tw-blur: blur(40px);
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
-.blur-3xl{
-  --tw-blur: blur(64px);
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
-}
-
 .filter{
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
-}
-
-.transition{
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
 }
 
 .transition-all{
@@ -2073,6 +2018,20 @@ body:is(.dark *){
   100% {
     transform: translate(0px, 0px) scale(1);
   }
+}
+
+@keyframes spin-slow {
+  from {
+    transform: rotate(0deg);
+  }
+
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.animate-spin-slow {
+  animation: spin-slow 20s linear infinite;
 }
 
 .animate-blob {
@@ -2355,18 +2314,9 @@ body:is(.dark *){
   opacity: 1;
 }
 
-.group:hover .group-hover\:duration-200{
-  transition-duration: 200ms;
-}
-
 .dark\:translate-x-6:is(.dark *){
   --tw-translate-x: 1.5rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.dark\:border-gray-800:is(.dark *){
-  --tw-border-opacity: 1;
-  border-color: rgb(31 41 55 / var(--tw-border-opacity, 1));
 }
 
 .dark\:bg-gray-800:is(.dark *){
@@ -2391,6 +2341,18 @@ body:is(.dark *){
 
 .dark\:bg-primary-gray\/90:is(.dark *){
   background-color: rgb(57 62 70 / 0.9);
+}
+
+.dark\:bg-primary\/10:is(.dark *){
+  background-color: rgb(0 173 181 / 0.1);
+}
+
+.dark\:bg-primary\/20:is(.dark *){
+  background-color: rgb(0 173 181 / 0.2);
+}
+
+.dark\:bg-primary\/30:is(.dark *){
+  background-color: rgb(0 173 181 / 0.3);
 }
 
 .dark\:bg-white:is(.dark *){
@@ -2470,10 +2432,6 @@ body:is(.dark *){
     order: 1;
   }
 
-  .md\:order-2{
-    order: 2;
-  }
-
   .md\:col-span-2{
     grid-column: span 2 / span 2;
   }
@@ -2492,14 +2450,6 @@ body:is(.dark *){
 
   .md\:h-20{
     height: 5rem;
-  }
-
-  .md\:h-96{
-    height: 24rem;
-  }
-
-  .md\:w-96{
-    width: 24rem;
   }
 
   .md\:w-auto{
@@ -2612,6 +2562,10 @@ body:is(.dark *){
 
   .lg\:col-span-3{
     grid-column: span 3 / span 3;
+  }
+
+  .lg\:grid-cols-2{
+    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
   .lg\:grid-cols-3{
