--- a/src/css/input.css
+++ b/src/css/input.css
@@ -43,6 +43,15 @@
            backdrop-blur-sm;
   }
 
+  .nav-link-active {
+    @apply text-primary dark:text-primary
+         relative
+         after:absolute after:content-['']
+         after:w-full after:h-0.5
+         after:bg-primary
+         after:-bottom-1 after:left-0;
+  }
+
   .nav-menus {
     @apply fixed md:static 
          top-[64px] left-0 z-20 
